[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ahmed KHALED <ahmed24khaled@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
uvicorn = "^0.11.3"
fastapi = "^0.57.0"
python-multipart = "^0.0.5"
requests = "^2.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
python-jose = "^3.1.0"
gunicorn = "^20.0.4"
pytest = "^5.4.1"
invoke = "^1.4.1"
pymongo = "^3.10.1"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-benchmark = "^3.2.3"
pytest-dotenv = "^0.5.2"
mongomock = "^3.19.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
